# fntpd

./: .rustfmt.toml  Cargo.toml  config.toml
src/: config.rs  daesock.rs  macros.rs  main.rs
src/ntp/: mod.rs  pkt.rs  timestamp.rs
